<resources>
    <!-- Untranslatable Text -->
    <string name="app_name" translatable="false">Nana</string>
    <string name="todo" translatable="false">TODO</string>

    <!-- Titles -->
    <string name="title_activity_main_publication" translatable="false">MainPublicationActivity</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>

    <!-- Menu Elements -->
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_news">News</string>
    <string name="menu_replenishment">Replenishment</string>
    <string name="menu_support">Support</string>
    <string name="menu_instruction">Instruction</string>
    <string name="menu_settings">Settings</string>

    <!-- Channel Names -->
    <string name="anime_channel">/anim/ - Anime</string>
    <string name="creation_channel">/cr/ - Creation</string>
    <string name="politics_channel">/pol/ - Politics</string>
    <string name="socially_channel">/soc/ - Socially</string>
    <string name="games_channel">/g/ - Games</string>
    <string name="sport_channel">/sp/ - Sport</string>

    <!-- Text Types -->
    <string name="n_strike" translatable="false"><strike>N</strike></string>
    <string name="n_underlined" translatable="false"><u>N</u></string>
    <string name="n_bold" translatable="false"><b>N</b></string>
    <string name="n_italics" translatable="false"><i>N</i></string>

    <!-- Other Strings -->
    <!-- Main -->
    <string name="version_draw_menu">Version 1.0.0</string>

    <!-- App Strings -->
    <string name="online_status_off">Online Status: Off</string>
    <string name="online_status_on">Online Status: On</string>

    <string name="online">Online</string>

    <string name="reputation">Reputation</string>
    <string name="nana_coins">Nana-Coins</string>

    <string name="new_publication">New Publication</string>
    <string name="choose_channel">Choose a channel</string>

    <string name="subscription">Subscription</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="saved">Saved</string>
    <string name="publish">Publish</string>

    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>

    <string name="сonfidentiality">Confidentiality</string>
    <string name="account_management">Account management</string>

    <string name="from_us">From us</string>
    <string name="pause_everything">Pause everything</string>
    <string name="appearance">Appearance</string>

    <string name="publication_and_comments">Publication and comments</string>
    <string name="memory_usage">Memory usage</string>
    <string name="data_and_multimedia">Data and multimedia</string>
    <string name="nick_name" translatable="false">mr_developer</string>

    <string name="personal">Personal</string>
    <string name="groups">Groups</string>

    <string name="registration">Registration</string>

    <!-- Special -->
    <string name="point" translatable="false">·</string>

    <!-- For Post -->
    <string name="hashtags_of_post">#park #nature #kharkiv</string>
    <string name="title_of_post">Turtle in the park</string>
    <string name="description_for_post">Hi everyone! Today, walking along the streets of Kharkov, I came across such a funny turtle not far from Shevchenko Park. Could not share with you, the Internet!</string>
    <string name="time_of_post">15h</string>

    <!-- Basic Words -->
    <string name="next">Next</string>
    <string name="theme">Theme</string>
    <string name="exit">Exit</string>
    <string name="account">Account</string>
    <string name="messages">Messages</string>
    <string name="language">Language</string>
    <string name="chats">Chats</string>
    <string name="save">Save</string>

    <string name="enter_text">Enter text</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="last_message">Last Message</string>
    <string name="offline">Offline</string>

    <!-- Numbers -->
    <string name="one_hundred" translatable="false">100</string>
    <string name="ten_thousand" translatable="false">10 000</string>

    <!-- Special Numbers -->
    <string name="amount_of_images" translatable="false">+4</string>

    <!-- Warnings And Messages -->
    <string name="empty_profile">Oops! \nLooks like it\'s empty!</string>
    <string name="in_developing">In Developing!</string>
    <string name="already_have_an_account">Already have an account? Sign in!</string>
    <string name="do_not_have_an_account">Don\'t have an account? Register!</string>
    <string name="or_login_with">Or login with</string>
    <string name="or_register_with">Or register with</string>

    <!-- Test Text -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "across actions and component types. For example, all components that lift on press have "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="small_text">There\'s a little text here!</string>
    <string name="welcome_to_nana">Welcome to Nana!</string>
    <string name="create_new_account">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>