<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.nana.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.nana.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.nana.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_replenishment"
        android:name="com.example.nana.ui.replenishment.ReplenishmentFragment"
        android:label="@string/menu_replenishment"
        tools:layout="@layout/fragment_replenishment" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.nana.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_instruction"
        android:name="com.example.nana.ui.instruction.InstructionFragment"
        android:label="@string/menu_instruction"
        tools:layout="@layout/fragment_instruction" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.nana.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/previewPublicationFragment"
        android:name="com.example.nana.publication.fragments.PreviewPublicationFragment"
        android:label="fragment_preview_publication"
        tools:layout="@layout/fragment_preview_publication" >
        <argument
            android:name="MyArg"
            android:defaultValue="Hello Internet!" />
    </fragment>

    <fragment
        android:id="@+id/publicationFragment"
        android:name="com.example.nana.publication.fragments.PublicationFragment"
        android:label="fragment_publication"
        tools:layout="@layout/fragment_publication" >
        <action
            android:id="@+id/action_publicationFragment_to_previewPublicationFragment"
            app:destination="@id/previewPublicationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
</navigation>